--- a/django_dockerfile/Dockerfile
+++ b/django_dockerfile/Dockerfile
@@ -5,14 +5,13 @@ FROM python:3.10
 
 ENV PYTHONUNBUFFERED 1
 
-
 # Set the working directory in the container
 WORKDIR /app
 
 # Copy the current directory contents into the container at /app
-COPY . /app
+COPY ../. /app
 
 # Install any needed packages specified in requirements.txt
-RUN pip install -r requirements.txt
+RUN pip install -r django_requirements.txt
 
 
